small text change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </p>
 
     <div class="user-information">
-        <p>My chin is an ass and I like it.</p>
+        <p>My chin is an ass, I hope to get famous.</p>
     </div>
   </div>
 
