--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     </p>
 
     <div class="user-information">
-        <p>My chin is an ass, I hope to get famous.</p>
+      <p>My chin is an ass, I hope to get famous.</p>
+    </div>
+
+    <div class="stats">
+      <div class="stat"><p>3290</p></div><div class="stat"><p>1</p></div><div class="stat"><p>3</p></div>
+      <div class="labStat"><p>Posts</p></div><div class="labStat"><p>Likes</p></div><div class="labStat"><p>Comments</p></div>
     </div>
   </div>
 
